--- a/standard/templates/standard/list.html
+++ b/standard/templates/standard/list.html
@@ -1,16 +1,15 @@
 {% extends 'account/base.html' %} {% block header %}
 <a class="navbar-brand" href="">評価基準一覧</a>
 {% endblock header%}{% block content %}
-<h3><a href="{% url 'standard:create' %}">新規作成</a></h3>
 <div class="container">
   <table class="table">
-    <thead>
+    <thead style="background-color: aquamarine">
       <tr>
         <th scope="col">評価基準</th>
         <!--整形のためtbodyと要素数をそろえる-->
         <th>user</th>
         <th></th>
-        <th></th>
+        <th><a href="{% url 'standard:create' %}">新規作成</a></th>
       </tr>
     </thead>
     <tbody>
