--- a/account/templates/account/base copy.html
+++ b/account/templates/account/base copy.html
@@ -11,18 +11,25 @@
     <!-- 互換表示の解除 -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <!-- Bootstrap CSS -->
+    <!--bootstrapを使うための読み込み-->
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <title>{% block title %}{%endblock title%}</title>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+
+    <title>{% block title %}{% endblock title %}</title>
+    <style></style>
   </head>
   <body>
     <!-- ナビバー -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-md navbar-light bg-info">
       <a class="navbar-brand" href="{% url 'account:top' %}"
         >アイディア発想支援サイト</a
       >
@@ -93,17 +100,25 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <!--ログインしていないときの表示-->
+          {% if not user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'idea:home' %}">ホーム</a>
+            <a class="nav-link" href="{% url 'account:login' %}"
+              >ログインすると表示されます。</a
+            >
+          </li>
+          <!--ログイン時の表示-->
+          {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'account:top' %}">ホーム</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'idea:list' %}">アイディア投稿</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'idea:v_list' %}">投票</a>
+            <a class="nav-link" href="{% url 'standard:list' %}">評価基準</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'standard:list' %}">評価基準</a>
+            <a class="nav-link" href="{% url 'idea:v_list' %}">投票</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'matrix:list' %}">マトリクス</a>
@@ -120,29 +135,12 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'retry:list' %}">再試行の設計</a>
           </li>
+          {% endif %}
         </ul>
       </div>
     </nav>
 
     <!-- コンテンツ -->
     {% block content %}{% endblock %}
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
