--- a/account/templates/account/top.html
+++ b/account/templates/account/top.html
@@ -1,12 +1,92 @@
-{% extends 'account/base.html' %} {% block title %} <title>トップページ</title>
-{% endblock title %}
-
-<!-- ナビバータイトル -->
-{% block header %}<a class="navbar-brand" href="">トップページ</a>
-{% endblock header %}
+{% extends 'account/base.html' %}
+<!--このコメント消さないで!バグるよ!!!-->
+{% block title %}トップページ {% endblock title %} {% block header %}
+<a class="navbar-brand" href="">トップページ</a>
+{% endblock header%}
 <!-- コンテンツ -->
 {% block content %}
-<div class="container">
-  <h1>Top Page!!</h1>
+
+<div class="container" style="background-color: #f0f8ff">
+  <h3>アイディア発想支援サイトとは</h3>
+  <p>
+    グループディスカッションにおける、アイディア発想や意思決定を支援します。
+  </p>
+  <p>
+    グループで使用する場合は、書き込みを行う人は書記の役割を担っている人のみにしてください。(ログインしたユーザーに情報が紐づけられているので他のユーザー名でログインを行うと情報が見れません。)
+  </p>
+
+  <h3>アイディア発想支援サイト使用の流れ</h3>
+  <h5>アイディア発想</h5>
+  <p>
+    <a href="{% url 'idea:list' %}">アイディア投稿</a
+    >を使ってアイディアを記載します。
+  </p>
+
+  <h5>評価基準の設定</h5>
+  <p>
+    <a href="{% url 'standard:list' %}">評価基準の設定</a
+    >でアイディア発想で発想されたアイディアの評価基準を設定します。
+  </p>
+
+  <h5>アイディアの絞り込み</h5>
+  <p>
+    すべてのアイディアに対して評価基準に対する議論を行うことが難しい(例:時間が足りない)場合、ここで多数決による投票を行います。
+  </p>
+  <p>
+    この際、各メンバーに最もよい(=best)と思うものに１つ、次によい(=better)と思うものを1つか2つ選んでもらうようにしましょう。
+  </p>
+
+  <h5>評価マトリクスの作成</h5>
+  <p>
+    評価基準を参考にアイディアに対するコメントを入力しながら議論を行いましょう。
+  </p>
+  <p>
+    コメントを入力する際は、そのコメントがポジティブ、またはネガティブなコメントなのか<span
+      style="color: #ff0000; font-weight: bold"
+      >コメントタイプ</span
+    >から選択してください。
+  </p>
+  <p>
+    また、既存するアイディアに追加の提案を行いたい場合は、コメントタイプで<span
+      style="font-weight: bold"
+      >追加アイディア</span
+    >を選択して入力してください。
+  </p>
+
+  <h5>統括的分析</h5>
+  <p>
+    納得のいくアイディアが決まった場合は<a href="{% url 'refine:list' %}"
+      >アイディアの精緻化</a
+    >に進みましょう。
+  </p>
+  <p>
+    納得のいくアイディアがなかった場合は<a href="{% url 'reflect:list' %}"
+      >アイディアの振り返り</a
+    >に進みましょう。
+  </p>
+
+  <h5>アイディアの精緻化</h5>
+  <p>
+    選ばれたアイディアについて深掘りすべき論点を複数設定し、その論点に対して議論を行いましょう。
+    これが終わればアイディア発想は完了です!!!
+  </p>
+  <h5>アイディアの振り返り</h5>
+  <p>
+    初めに、上の表にどうして納得のいくアイディアが出なかったのか話し合うための論点を複数設定しましょう。
+  </p>
+  <p>
+    次に、真ん中の表にアイディア評価マトリクスの時と同じように論点に対して、コメントタイプ(ポジティブ、ネガティブ)を選択し、コメントを入力しましょう。
+  </p>
+  <p>
+    最後は、コメントを見返し、どこに問題があったのか問題点を下の表に入力しましょう。
+  </p>
+  <h5>再試行の設計</h5>
+  <p>
+    アイディアの振り返りで浮かび上がった問題点を解消にするにはどのように再試行を行えばよいか議論し、再試行の内容を入力しましょう
+  </p>
+  <h5>再試行の設計が終わったら...</h5>
+  <p>
+    再試行の内容を参照し、それを踏まえながら再試行を行いましょう。(例:アイディア発想からやり直す、アイディア評価マトリクスで追加アイディアを考える等)
+  </p>
 </div>
-{% endblock %}
+{% endblock content %}
