--- a/idea/templates/idea/home.html
+++ b/idea/templates/idea/home.html
@@ -1,8 +1,7 @@
-{% extends 'account/base.html' %} {% block title %}{%endblock title%} {% block
-header %}
+{% extends 'account/base.html' %} {% block header %}
 
 <div id="header">
-  <h1>ホーム画面</h1>
+  <a class="navbar-brand" href="">ホーム画面</a>
 </div>
 
 {% endblock header %} {% block content %}
