--- a/idea/templates/idea/idea_list.html
+++ b/idea/templates/idea/idea_list.html
@@ -2,7 +2,6 @@
 <a class="navbar-brand" href="">アイディア一覧</a>
 {% endblock header %} {% block content %}
 
-
 <div class="container">
   <table class="table">
     <thead style="background-color: aquamarine">
@@ -13,7 +12,7 @@
         <th>ユーザー名</th>
         <th></th>
         <th></th>
-        <th><a href="{% url 'idea:create' %}">新規作成</a</th>
+        <th><a href="{% url 'idea:create' %}">新規作成</a></th>
       </tr>
     </thead>
     <tbody>
