--- a/account/templates/account/base.html
+++ b/account/templates/account/base.html
@@ -66,52 +66,6 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'account:logout' %}">ログアウト</a>
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-    </nav>
-    <div
-      class="pl-4 small"
-      style="background-color: #e2e3e5; border-bottom: solid 1px #f3f3f3"
-    >
-      {% if not user.is_authenticated %} こんにちは! ゲスト さん {% else %}
-      こんにちは! {{ user.username }} さん{% endif %}
-    </div>
-    <!-- ナビバー2 -->
-    <nav
-      class="navbar navbar-expand-md navbar-light"
-      style="background-color: #e3f2fd"
-    >
-      {% block header %}{% endblock header %}
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <!--ログインしていないときの表示-->
-          {% if not user.is_authenticated %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'account:login' %}"
-              >ログインすると表示されます。</a
-            >
-          </li>
-          <!--ログイン時の表示-->
-          {% else %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'account:top' %}">ホーム</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="{% url 'idea:list' %}">アイディア投稿</a>
           </li>
           <li class="nav-item">
@@ -135,12 +89,41 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'retry:list' %}">再試行の設計</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'account:logout' %}">ログアウト</a>
+          </li>
           {% endif %}
         </ul>
       </div>
     </nav>
+    <div
+      class="pl-4 small"
+      style="background-color: #e2e3e5; border-bottom: solid 1px #f3f3f3"
+    >
+      {% if not user.is_authenticated %} こんにちは! ゲスト さん {% else %}
+      こんにちは! {{ user.username }} さん{% endif %}
+    </div>
 
     <!-- コンテンツ -->
-    {% block content %}{% endblock %}
+    <div style="background-color: #edf7ff">
+      <h3>{% block header %}{% endblock header%}</h3>
+    </div>
+    <!--形を整える-->
+    {% block content %}{% endblock content %}
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js"
+      integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
