--- a/account/templates/account/base.html
+++ b/account/templates/account/base.html
@@ -66,7 +66,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'idea:list' %}">アイディア投稿</a>
+            <a class="nav-link" href="{% url 'idea:list' %}">アイディア発想</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'standard:list' %}">評価基準</a>
