--- a/account/templates/account/top.html
+++ b/account/templates/account/top.html
@@ -9,84 +9,76 @@
 <div class="container" style="background-color: #f0f8ff">
   <h3>アイディア発想支援サイトとは</h3>
   <p>
-    グループディスカッションにおける、アイディア発想や意思決定を支援します。
-  </p>
-  <p>
-    グループで使用する場合は、書き込みを行う人は書記の役割を担っている人のみにしてください。(ログインしたユーザーに情報が紐づけられているので他のユーザー名でログインを行うと情報が見れません。)
+    グループディスカッションにおける、アイディア発想や意思決定を支援します。</br>
+    グループで使用する場合は、書き込みを行う人は書記の役割を担っている人のみにしてください。</br>
+    (ログインしたユーザーに情報が紐づけられているので他のユーザー名でログインを行うと情報が見れません。)
   </p>
 
   <h3>アイディア発想支援サイト使用の流れ</h3>
-  <h5>アイディア発想</h5>
+  <h5>ステップ1 アイディア発想</h5>
   <p>
-    <a href="{% url 'idea:list' %}">アイディア投稿</a
-    >を使ってアイディアを記載します。
+    <span style="color: #ff0000; font-weight: bold">アイディア発想</span
+    >で発想されたアイディアを入力していきます。
   </p>
 
-  <h5>評価基準の設定</h5>
+  <h5>ステップ2 評価基準の設定</h5>
   <p>
-    <a href="{% url 'standard:list' %}">評価基準の設定</a
+    <span style="color: #ff0000; font-weight: bold">評価基準</span
     >でアイディア発想で発想されたアイディアの評価基準を設定します。
   </p>
 
-  <h5>アイディアの絞り込み</h5>
+  <h5>ステップ3 アイディアの絞り込み</h5>
   <p>
-    すべてのアイディアに対して評価基準に対する議論を行うことが難しい(例:時間が足りない)場合、ここで多数決による投票を行います。
-  </p>
-  <p>
-    この際、各メンバーに最もよい(=best)と思うものに１つ、次によい(=better)と思うものを1つか2つ選んでもらうようにしましょう。
+    すべてのアイディアに対して評価基準に対する議論を行うことが難しい(例:時間が足りない)場合、ここで多数決による投票を行います。</br>
+    この際、各メンバーに最もよい(=best)と思うものに１つ、次によい(=better)と思うものを1,2個選んでもらうようにしましょう。
   </p>
 
-  <h5>評価マトリクスの作成</h5>
+  <h5>ステップ4 評価マトリクスの作成</h5>
   <p>
-    評価基準を参考にアイディアに対するコメントを入力しながら議論を行いましょう。
-  </p>
-  <p>
-    コメントを入力する際は、そのコメントがポジティブ、またはネガティブなコメントなのか<span
-      style="color: #ff0000; font-weight: bold"
+    評価基準を参考にアイディアに対するコメントを入力しながら議論を行いましょう。</br>
+    コメントを入力する際は、<span style="color: #ff0000; font-weight: bold"
       >コメントタイプ</span
-    >から選択してください。
-  </p>
-  <p>
+    >を選択して、コメント内容を入力しましょう。</br>
     また、既存するアイディアに追加の提案を行いたい場合は、コメントタイプで<span
-      style="font-weight: bold"
+      style="color: #ff0000; font-weight: bold"
       >追加アイディア</span
     >を選択して入力してください。
   </p>
 
-  <h5>統括的分析</h5>
+  <h5>ステップ5 統括的分析</h5>
   <p>
-    納得のいくアイディアが決まった場合は<a href="{% url 'refine:list' %}"
-      >アイディアの精緻化</a
-    >に進みましょう。
-  </p>
-  <p>
-    納得のいくアイディアがなかった場合は<a href="{% url 'reflect:list' %}"
-      >アイディアの振り返り</a
+    納得のいくアイディアが決まった場合はアイディアの<span
+      style="color: #ff0000; font-weight: bold"
+      >精緻化</span
+    >に進みましょう。</br>
+    納得のいくアイディアがなかった場合はアイディアの<span
+      style="color: #ff0000; font-weight: bold"
+      >振り返り</span
     >に進みましょう。
   </p>
 
-  <h5>アイディアの精緻化</h5>
+  <h5>ステップ6-A アイディアの精緻化</h5>
   <p>
-    選ばれたアイディアについて深掘りすべき論点を複数設定し、その論点に対して議論を行いましょう。
-    これが終わればアイディア発想は完了です!!!
+    選ばれたアイディアについて深掘りすべき論点を複数設定し、その論点に対して議論を行いましょう。</br>
+    この作業をすることで、アイディアのプレゼンテーションをするときに様々な質問に対して回答する準備ができます。</br>
+    これが終わればアイディア発想は完了です!!! お疲れさまでした!
   </p>
-  <h5>アイディアの振り返り</h5>
+  <h5>ステップ6-B-1 アイディアの振り返り</h5>
   <p>
-    初めに、上の表にどうして納得のいくアイディアが出なかったのか話し合うための論点を複数設定しましょう。
-  </p>
-  <p>
-    次に、真ん中の表にアイディア評価マトリクスの時と同じように論点に対して、コメントタイプ(ポジティブ、ネガティブ)を選択し、コメントを入力しましょう。
-  </p>
-  <p>
+    初めに、上の表にどうして納得のいくアイディアが出なかったのか話し合うための論点を複数設定しましょう。</br>
+    次に、真ん中の表にアイディア評価マトリクスの時と同じように論点に対して、コメントタイプ(ポジティブ、ネガティブ)を選択し、コメントを入力しましょう。</br>
     最後は、コメントを見返し、どこに問題があったのか問題点を下の表に入力しましょう。
   </p>
-  <h5>再試行の設計</h5>
+  <h5>ステップ6-B-2 再試行の設計</h5>
   <p>
     アイディアの振り返りで浮かび上がった問題点を解消にするにはどのように再試行を行えばよいか議論し、再試行の内容を入力しましょう
   </p>
   <h5>再試行の設計が終わったら...</h5>
   <p>
-    再試行の内容を参照し、それを踏まえながら再試行を行いましょう。(例:アイディア発想からやり直す、アイディア評価マトリクスで追加アイディアを考える等)
+    ステップ6-B-2の再試行の内容を参照し、それを踏まえながら再試行を行いましょう。
+  </p>
+  <p>
+    (例:ステップ1のアイディア発想からやり直す、ステップ4のアイディア評価マトリクスで追加アイディアを考える等)
   </p>
 </div>
 {% endblock content %}
