--- a/account/templates/account/top.html
+++ b/account/templates/account/top.html
@@ -27,20 +27,23 @@
     >でアイディア発想で発想されたアイディアの評価基準を設定します。
   </p>
 
-  <h5>ステップ3 アイディアの絞り込み</h5>
+  <h5>ステップ3 投票</h5>
   <p>
-    すべてのアイディアに対して評価基準に対する議論を行うことが難しい(例:時間が足りない)場合、ここで多数決による投票を行います。</br>
-    この際、各メンバーに最もよい(=best)と思うものに１つ、次によい(=better)と思うものを1,2個選んでもらうようにしましょう。
+    すべてのアイディアに対して評価基準に対する議論を行うことが難しい(例:時間が足りない)と考えられる場合、ここで多数決による投票を行い、絞り込みを行います。</br>
+    各メンバーに最もよい(=best)と思うものに１つ、次によい(=better)と思うものを1,2個選んでもらうようにしましょう。</br>
+    メンバーのひとりはその結果を<span style="color: #ff0000; font-weight: bold">投票</span>に入力しましょう。</br>
+    ※bestは2点、betterは1点換算されて結果の欄に出力されます。
+    アイディアの数によりますが、得点の上位5個目安に絞り込みましょう。
   </p>
 
   <h5>ステップ4 評価マトリクスの作成</h5>
   <p>
-    評価基準を参考にアイディアに対するコメントを入力しながら議論を行いましょう。</br>
-    コメントを入力する際は、<span style="color: #ff0000; font-weight: bold"
-      >コメントタイプ</span
-    >を選択して、コメント内容を入力しましょう。</br>
+    評価基準を基にアイディアに対する議論を行い、<span style="color: #ff0000; font-weight: bold"
+    >評価マトリクス</span>に入力しましょう。</br>
+    コメントを入力する際は、<span style="color: goldenrod; font-weight: bold"
+      >コメントタイプ</span>(ポジティブ、ネガティブ)を選択して、コメント内容を入力しましょう。</br>
     また、既存するアイディアに追加の提案を行いたい場合は、コメントタイプで<span
-      style="color: #ff0000; font-weight: bold"
+      style="color: goldenrod; font-weight: bold"
       >追加アイディア</span
     >を選択して入力してください。
   </p>
@@ -59,19 +62,30 @@
 
   <h5>ステップ6-A アイディアの精緻化</h5>
   <p>
-    選ばれたアイディアについて深掘りすべき論点を複数設定し、その論点に対して議論を行いましょう。</br>
+    アイディアの<span
+    style="color: #ff0000; font-weight: bold"
+    >精緻化</span>は、納得できるアイディアがあった場合に行います。</br>
+    選ばれたアイディアについて深掘りすべき論点を複数設定し、その論点に対して議論を行い<span
+    style="color: #ff0000; font-weight: bold"
+    >精緻化</span>に入力しましょう。</br>
     この作業をすることで、アイディアのプレゼンテーションをするときに様々な質問に対して回答する準備ができます。</br>
     これが終わればアイディア発想は完了です!!! お疲れさまでした!
   </p>
   <h5>ステップ6-B-1 アイディアの振り返り</h5>
   <p>
+    アイディアの<span
+    style="color: #ff0000; font-weight: bold"
+    >振り返り</span>は、納得できるアイディアがない場合に行います。</br>
     初めに、上の表にどうして納得のいくアイディアが出なかったのか話し合うための論点を複数設定しましょう。</br>
-    次に、真ん中の表にアイディア評価マトリクスの時と同じように論点に対して、コメントタイプ(ポジティブ、ネガティブ)を選択し、コメントを入力しましょう。</br>
+    次に、真ん中の表にアイディア評価マトリクスの時と同じように論点に対して、<span style="color: goldenrod; font-weight: bold"
+    >コメントタイプ</span>(ポジティブ、ネガティブ)を選択し、コメントを入力しましょう。</br>
     最後は、コメントを見返し、どこに問題があったのか問題点を下の表に入力しましょう。
   </p>
   <h5>ステップ6-B-2 再試行の設計</h5>
   <p>
-    アイディアの振り返りで浮かび上がった問題点を解消にするにはどのように再試行を行えばよいか議論し、再試行の内容を入力しましょう
+    アイディアの振り返りで浮かび上がった問題点を解消にするにはどのように再試行を行えばよいか議論し、<span
+    style="color: #ff0000; font-weight: bold"
+    >再試行の設計</span>に再試行の内容を入力しましょう
   </p>
   <h5>再試行の設計が終わったら...</h5>
   <p>
