--- a/idea/templates/idea/idea_list.html
+++ b/idea/templates/idea/idea_list.html
@@ -1,5 +1,9 @@
 {% extends 'account/base.html' %} {% block header %}
-<a class="navbar-brand" href="">アイディア一覧</a>
+<p>
+  <span id="page-title">アイディア一覧</span></br> アイディアを入力していきます。
+</p>
+
+<!--改行防ぎ-->
 {% endblock header %} {% block content %}
 
 <div class="container">
