--- a/idea/templates/idea/v_list.html
+++ b/idea/templates/idea/v_list.html
@@ -1,5 +1,7 @@
 {% extends 'account/base.html' %} {% block header %}
-<a class="navbar-brand" href="">アイディア投票</a>
+<p>
+  <span id="page-title">アイディア投票</span></br> 
+</p>
 {% endblock header %} {% block content %} {% load math_tags %}
 <div class="container">
   <table class="table">
