--- a/matrix/templates/matrix/list.html
+++ b/matrix/templates/matrix/list.html
@@ -1,5 +1,7 @@
 {% extends 'account/base.html' %} {% block header %}
-<a class="navbar-brand" href="">アイディア評価マトリクス</a>
+<p>
+  <span id="page-title">アイディア評価マトリクス</span></br> 評価マトリクスを作成しましょう。
+</p>
 {% endblock header %} {% block content %}
 
 <div class="container">
