--- a/refine/templates/refine/home.html
+++ b/refine/templates/refine/home.html
@@ -1,5 +1,7 @@
 {% extends 'account/base.html' %} {% block header %}
-<a class="navbar-brand" href="">統括的分析</a>
+<p>
+    <span id="page-title">統括的分析</span></br> 
+</p>
 {% endblock header %} {% block content %}
 
 <p>納得のいくアイディアは出せましたか</p>
