--- a/refine/templates/refine/list.html
+++ b/refine/templates/refine/list.html
@@ -1,5 +1,7 @@
 {% extends 'account/base.html' %} {% block header %}
-<a class="navbar-brand" href="">アイディアの精緻化</a>
+<p>
+  <span id="page-title">アイディアの精緻化</span></br> 内容を入力していきます。
+</p>
 {% endblock header%} {% block content %}
 
 <div class="container">
