--- a/reflect/templates/reflect/list.html
+++ b/reflect/templates/reflect/list.html
@@ -1,5 +1,7 @@
 {% extends 'account/base.html' %} {% block header %}
-<a class="navbar-brand" href="">アイディアの振り返り</a>
+<p>
+  <span id="page-title">アイディアの振り返り</span></br> アイディアを振り返りましょう。
+</p>
 {% endblock header %} {% block content %}
 <!--論点を表示する-->
 <div class="container">
