--- a/retry/templates/retry/list.html
+++ b/retry/templates/retry/list.html
@@ -1,5 +1,7 @@
 {% extends 'account/base.html' %} {% block header %}
-<a class="navbar-brand" href="">再試行の設計</a>
+<p>
+  <span id="page-title">再試行の設計</span></br> 
+</p>
 {% endblock header %}
 <!--このコメントは消さないで、インデントでバグる-->
 {% block content %}
