--- a/standard/templates/standard/list.html
+++ b/standard/templates/standard/list.html
@@ -1,5 +1,7 @@
 {% extends 'account/base.html' %} {% block header %}
-<a class="navbar-brand" href="">評価基準一覧</a>
+<p>
+  <span id="page-title">評価基準一覧</span></br> 評価基準を入力していきます。
+</p>
 {% endblock header%}{% block content %}
 <div class="container">
   <table class="table">
