--- a/account/templates/account/top.html
+++ b/account/templates/account/top.html
@@ -10,6 +10,7 @@
   <h3>アイディア発想支援サイトとは</h3>
   <p>
     グループディスカッションにおける、アイディア発想や意思決定を支援します。</br>
+    下記に示すステップに従い、議論を行ってみてください。
     グループで使用する場合は、書き込みを行う人は書記の役割を担っている人のみにしてください。</br>
     (ログインしたユーザーに情報が紐づけられているので他のユーザー名でログインを行うと情報が見れません。)
   </p>
@@ -18,27 +19,30 @@
   <h5>ステップ1 アイディア発想</h5>
   <p>
     <span style="color: #ff0000; font-weight: bold">アイディア発想</span
-    >で発想されたアイディアを入力していきます。
+    >で発想されたアイディアを入力していきます。</br>
+    PDCAサイクルを回した際にメモできるように試行回数を入力する欄があります。</br>
+    よくわからない場合は、デフォルトで入力されている１のままにしてください。</br>
   </p>
 
   <h5>ステップ2 評価基準の設定</h5>
   <p>
     <span style="color: #ff0000; font-weight: bold">評価基準</span
-    >でアイディア発想で発想されたアイディアの評価基準を設定します。
+    >でアイディア発想で発想されたアイディアの評価基準を設定します。</br>
+    評価基準は3つ程度設定しましょう。
   </p>
 
   <h5>ステップ3 投票</h5>
   <p>
     すべてのアイディアに対して評価基準に対する議論を行うことが難しい(例:時間が足りない)と考えられる場合、ここで多数決による投票を行い、絞り込みを行います。</br>
-    各メンバーに最もよい(=best)と思うものに１つ、次によい(=better)と思うものを1,2個選んでもらうようにしましょう。</br>
+    メンバーに最もよい(=best)と思うものに１つ、次によい(=better)と思うものを1,2個選んでもらうようにしましょう。</br>
     メンバーのひとりはその結果を<span style="color: #ff0000; font-weight: bold">投票</span>に入力しましょう。</br>
     ※bestは2点、betterは1点換算されて結果の欄に出力されます。
-    アイディアの数によりますが、得点の上位5個目安に絞り込みましょう。
+    アイディアの数によりますが、得点上位5個を目安に絞り込みましょう。
   </p>
 
   <h5>ステップ4 評価マトリクスの作成</h5>
   <p>
-    評価基準を基にアイディアに対する議論を行い、<span style="color: #ff0000; font-weight: bold"
+    アイディアに対して評価基準をもとに議論を行い、<span style="color: #ff0000; font-weight: bold"
     >評価マトリクス</span>に入力しましょう。</br>
     コメントを入力する際は、<span style="color: goldenrod; font-weight: bold"
       >コメントタイプ</span>(ポジティブ、ネガティブ)を選択して、コメント内容を入力しましょう。</br>
