--- a/idea/templates/idea/idea_list.html
+++ b/idea/templates/idea/idea_list.html
@@ -1,6 +1,7 @@
 {% extends 'account/base.html' %} {% block header %}
 <p>
-  <span id="page-title">アイディア一覧</span></br> アイディアを入力していきます。
+  <span id="page-title">アイディア一覧</span
+  >　　　アイディアを入力していきましょう
 </p>
 
 <!--改行防ぎ-->
