--- a/idea/templates/idea/v_list copy.html
+++ b/idea/templates/idea/v_list copy.html
@@ -1,16 +1,22 @@
-{% extends 'idea/base.html' %} {% block header %}
-<h1>投票ツール</h1>
-<!--このindexは後で消す-->
-<td><a href="index">index</a></td>
+<!--マルチモーダルと投票(旧の廃止のコピー)-->
+{% extends 'account/base.html' %} {% block header %}
+<p>
+  <span id="page-title">アイディア投票</span
+  >　　　メンバーは最もよい(=best)と思うものに１つ、次によい(=better)と思うものを1,2個選びましょう
+</p>
 {% endblock header %} {% block content %} {% load math_tags %}
 <div class="container">
   <table class="table">
-    <thead>
+    <thead style="background-color: aquamarine">
       <tr>
         <th>アイディア</th>
         <th>bestの票</th>
         <th>betterの票</th>
         <th>得点</th>
+        <th>user</th>
+        <th></th>
+        <th></th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -21,11 +27,11 @@
         <td>{{ a.better_choice}}</td>
         <!--カスタムテンプレートを使って計算-->
         <td>{% multiply a.best_choice a.better_choice %}</td>
-        <td><a href="{% url 'idea:v_detail' a.pk %}">投票</a></td>
-        <td>編集(未実装)</td>
-        <td>
-          <a href="{% url 'idea:Vote_decrease' pk=a.id %}">bestを一つ減らす</a>
-        </td>
+        <td>{{ a.create_user}}</td>
+        <td><a href="{% url 'idea:vote_update' a.pk %}">投票</a></td>
+
+        <!--ここから下の機能は廃止-->
+        <td><a href="{% url 'idea:v_detail' a.pk %}">投票(旧)</a></td>
         <!--モーダルはじめ-->
         {# 以下削除ボタン #}
         <td>
@@ -35,16 +41,16 @@
             type="button"
             class="btn btn-primary"
             data-toggle="modal"
-            data-target="#Modal{{ a.pk }}" 
+            data-target="#Modal{{ a.pk }}"
           >
-            押すと表示されます。
+            投票内容の修正
           </button>
 
           <!-- モーダルの設定 -->
           <!--idを変更している-->
           <div
             class="modal fade"
-            id="Modal{{ a.pk }}" 
+            id="Modal{{ a.pk }}"
             tabindex="-1"
             role="dialog"
             aria-labelledby="Modal"
@@ -55,7 +61,8 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <h5 class="modal-title" id="Modal">
-                    モーダルのタイトルが表示されます
+                    <!--モーダルのタイトルが表示されます-->
+                    "{{a.title}}" の投票数の編集
                   </h5>
                   <button
                     type="button"
@@ -67,9 +74,10 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                  モーダルのコンテンツを表示します。このモーダルはサイズを大きくしています。
+                  <!--モーダルのコンテンツを表示します。このモーダルはサイズを大きくしています。
                   またレシポンシブデザインに対応しているので画面を小さくすると、モーダルも自動で縮小されます
-                  {{a.title}}
+                  -->
+                  行いたい操作を下のボタンから選んでください。
                 </div>
                 <div class="modal-footer">
                   <button
@@ -79,23 +87,26 @@
                   >
                     閉じる
                   </button>
-                  <a href="{% url 'idea:Vote_decrease2' pk=a.id %}"
-            >betterを一つ減らす</a
+                  <a href="{% url 'idea:Vote_decrease' pk=a.id %}">
+                    <button type="button" class="btn-primary">
+                      bestを1つ減らす
+                    </button>
+                  </a>
+                  <a href="{% url 'idea:Vote_decrease2' pk=a.id %}">
+                    <button type="button" class="btn-primary">
+                      betterを1つ減らす
+                    </button>
+                  </a>
                 </div>
               </div>
             </div>
           </div>
-
+          <!--ここまで-->
           <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
           <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
           <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
         </td>
         <!--モーダル終わり-->
-        <td>
-          <a href="{% url 'idea:Vote_decrease2' pk=a.id %}"
-            >betterを一つ減らす</a
-          >
-        </td>
       </tr>
       {% endfor %}
     </tbody>
