--- a/matrix/templates/matrix/list.html
+++ b/matrix/templates/matrix/list.html
@@ -1,6 +1,7 @@
 {% extends 'account/base.html' %} {% block header %}
 <p>
-  <span id="page-title">アイディア評価マトリクス</span></br> 評価マトリクスを作成しましょう。
+  <span id="page-title">アイディア評価マトリクス</span>
+  　　　アイディアに対して、評価基準をもとに議論を行い内容を入力しましょう。
 </p>
 {% endblock header %} {% block content %}
 
