--- a/reflect/templates/reflect/list.html
+++ b/reflect/templates/reflect/list.html
@@ -1,6 +1,7 @@
 {% extends 'account/base.html' %} {% block header %}
 <p>
-  <span id="page-title">アイディアの振り返り</span></br> アイディアを振り返りましょう。
+  <span id="page-title">アイディアの振り返り</span>
+  　　　どうして納得いかなかったのか論点を定めましょう(上)　その論点について、話し合いを行い(真ん中)、最後に問題点としてまとめましょう(下)
 </p>
 {% endblock header %} {% block content %}
 <!--論点を表示する-->
