--- a/standard/templates/standard/list.html
+++ b/standard/templates/standard/list.html
@@ -1,6 +1,7 @@
 {% extends 'account/base.html' %} {% block header %}
 <p>
-  <span id="page-title">評価基準一覧</span></br> 評価基準を入力していきます。
+  <span id="page-title">評価基準一覧</span
+  >　　　3つ程度評価基準を設定しましょう(例 新規性、独創性、実行可能性、有効性)
 </p>
 {% endblock header%}{% block content %}
 <div class="container">
