--- a/refine/templates/refine/list.html
+++ b/refine/templates/refine/list.html
@@ -1,6 +1,7 @@
 {% extends 'account/base.html' %} {% block header %}
 <p>
-  <span id="page-title">アイディアの精緻化</span></br> 内容を入力していきます。
+  <span id="page-title">アイディアの精緻化</span>
+  　　　アイディアに対して指摘されそうなことを話し合い、論点を定めましょう　そして、優先順位に従い、論点について議論を行いメモを入力しましょう
 </p>
 {% endblock header%} {% block content %}
 
