--- a/idea/templates/idea/idea_detail.html
+++ b/idea/templates/idea/idea_detail.html
@@ -1,5 +1,8 @@
-{% extends 'account/base.html' %} {% block header %}
-<a class="navbar-brand" href="">アイディア詳細</a>
+{% extends 'account/base.html' %}{% block title %}
+<title>アイディア詳細-アイディア発想支援</title> {% endblock title %}
+<!--ページ見出し-->
+{% block header %}
+<span id="page-title">アイディア詳細</span>
 {% endblock header %} {% block content %}
 
 <div class="card">
