--- a/idea/templates/idea/idea_list.html
+++ b/idea/templates/idea/idea_list.html
@@ -1,4 +1,7 @@
-{% extends 'account/base.html' %} {% block header %}
+{% extends 'account/base.html' %} {% block title %}
+<title>アイディア一覧-アイディア発想支援</title> {% endblock title %}
+<!--改行防ぎ-->
+{% block header %}
 <p>
   <span id="page-title">アイディア一覧</span
   >　　　アイディアを入力していきましょう
