--- a/standard/templates/standard/list.html
+++ b/standard/templates/standard/list.html
@@ -1,4 +1,7 @@
-{% extends 'account/base.html' %} {% block header %}
+{% extends 'account/base.html' %}{% block title %}
+<title>評価基準一覧-アイディア発想支援</title> {% endblock title %}
+<!--ページ見出し-->
+{% block header %}
 <p>
   <span id="page-title">評価基準一覧</span
   >　　　3つ程度評価基準を設定しましょう(例 新規性、独創性、実行可能性、有効性)
