--- a/account/templates/account/base.html
+++ b/account/templates/account/base.html
@@ -23,8 +23,8 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-
-    <title>{% block title %}{% endblock title %}</title>
+    <!--ページ名のタイトル-->
+    {% block title %}{% endblock title %}
     <style>
       #page-title {
         font-size: 20px;
