--- a/account/templates/account/my_page.html
+++ b/account/templates/account/my_page.html
@@ -1,5 +1,7 @@
-{% extends 'account/base.html' %}
-
+{% extends 'account/base.html' %} {% block title %}<title>
+  マイページ-アイディア発想支援
+</title>
+{% endblock title %}
 <!-- コンテンツ -->
 {% block content %}
 <div class="container">
