--- a/standard/templates/standard/delete.html
+++ b/standard/templates/standard/delete.html
@@ -1,5 +1,8 @@
-{% extends 'account/base.html' %} {% block header %}
-<a class="navbar-brand" href="">評価基準の削除</a>
+{% extends 'account/base.html' %}{% block title %}
+<title>評価基準の削除-アイディア発想支援</title> {% endblock title %}
+<!--ページ見出し-->
+{% block header %}
+<span id="page-title">評価基準の削除</span>
 {% endblock header%} {% block content %}
 <form action="" method="POST">
   {% csrf_token %}
