--- a/standard/templates/standard/form.html
+++ b/standard/templates/standard/form.html
@@ -1,5 +1,8 @@
-{% extends 'account/base.html' %} {% block header %}
-<a class="navbar-brand" href="">評価基準の投稿/編集 </a>
+{% extends 'account/base.html' %}{% block title %}
+<title>評価基準の投稿/編集-アイディア発想支援</title> {% endblock title %}
+<!--ページ見出し-->
+{% block header %}
+<span id="page-title">アイディア詳細</span>
 {% endblock header%} {% block content %}
 <form action="" method="POST">
   {% csrf_token %}
