--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,4 +1,6 @@
-{% extends 'account/base.html' %}
+{% extends 'account/base.html' %}{% block title %}
+<title>ログイン-アイディア発想支援</title> {% endblock title %}
+<!--ページ見出し-->
 
 <!-- コンテンツ -->
 {% block content %}
