--- a/matrix/templates/matrix/list.html
+++ b/matrix/templates/matrix/list.html
@@ -1,4 +1,9 @@
-{% extends 'account/base.html' %} {% block header %}
+{% extends 'account/base.html' %}{% block title %}<title>
+  評価マトリクス-アイディア発想支援
+</title>
+{% endblock title %}
+<!--ヘッダー-->
+{% block header %}
 <p>
   <span id="page-title">アイディア評価マトリクス</span>
   　　　アイディアに対して、評価基準をもとに議論を行い内容を入力しましょう。
