--- a/refine/templates/refine/form.html
+++ b/refine/templates/refine/form.html
@@ -1,5 +1,10 @@
-{% extends 'account/base.html' %} {% block header %}
-<a class="navbar-brand" href="">アイディアの精緻化論点の投稿</a>
+{% extends 'account/base.html' %}{% block title %}<title>
+  アイディアの精緻化投稿-アイディア発想支援
+</title>
+{% endblock title %}
+<!--ヘッダー-->
+{% block header %}
+<span id="page-title">アイディアの精緻化論点の投稿</span>
 {% endblock header %} {% block content %}
 
 <form action="" method="POST">
