--- a/refine/templates/refine/home.html
+++ b/refine/templates/refine/home.html
@@ -1,4 +1,8 @@
-{% extends 'account/base.html' %} {% block header %}
+{% extends 'account/base.html' %}{% block title %}<title>
+    統括的分析-アイディア発想支援
+  </title>
+  {% endblock title %}
+  <!--ヘッダー--> {% block header %}
 <p>
     <span id="page-title">統括的分析</span></br> 
 </p>
