--- a/refine/templates/refine/list.html
+++ b/refine/templates/refine/list.html
@@ -1,4 +1,9 @@
-{% extends 'account/base.html' %} {% block header %}
+{% extends 'account/base.html' %}{% block title %}<title>
+  アイディアの精緻化-アイディア発想支援
+</title>
+{% endblock title %}
+<!--ヘッダー-->
+{% block header %}
 <p>
   <span id="page-title">アイディアの精緻化</span>
   　　　アイディアに対して指摘されそうなことを話し合い、論点を定めましょう　そして、優先順位に従い、論点について議論を行いメモを入力しましょう
