--- a/reflect/templates/reflect/list.html
+++ b/reflect/templates/reflect/list.html
@@ -1,4 +1,8 @@
-{% extends 'account/base.html' %} {% block header %}
+{% extends 'account/base.html' %} {% block title %}<title>
+  振り返り-アイディア発想支援
+</title>
+{% endblock title %}
+<!--ヘッダー-->{% block header %}
 <p>
   <span id="page-title">アイディアの振り返り</span>
   　　　どうして納得いかなかったのか論点を定めましょう(上)　その論点について、話し合いを行い(真ん中)、最後に問題点としてまとめましょう(下)
