--- a/account/templates/account/user_form.html
+++ b/account/templates/account/user_form.html
@@ -1,4 +1,5 @@
-{% extends "account/base.html" %}
+{% extends "account/base.html" %}{% block title %}
+<title>会員登録-アイディア発想支援</title> {% endblock title %}
 
 <!-- コンテンツ -->
 {% block content %}
