--- a/idea/templates/idea/v_list.html
+++ b/idea/templates/idea/v_list.html
@@ -1,4 +1,6 @@
-{% extends 'account/base.html' %} {% block header %}
+{% extends 'account/base.html' %}{% block title %}
+<title>投票-アイディア発想支援</title> {% endblock title %}
+<!--ページ見出し--> {% block header %}
 <p>
   <span id="page-title">アイディア投票</span
   >　　　メンバーはそれぞれ、発想されたアイディアに対し、bestを１つ、betterを一つか二つ選び、投票を押して記録しましょう
@@ -27,7 +29,9 @@
         <!--カスタムテンプレートを使って計算-->
         <td>{% multiply a.best_choice a.better_choice %}</td>
         <td>{{ a.create_user}}</td>
-        <td><a href="{% url 'idea:vote_update' a.pk %}">投票</a></td>
+        <td><a 
+          class="btn btn-primary"
+          href="{% url 'idea:vote_update' a.pk %}">投票</a></td>
 
         
           <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
