--- a/matrix/templates/matrix/delete.html
+++ b/matrix/templates/matrix/delete.html
@@ -1,5 +1,10 @@
-{% extends 'account/base.html' %} {% block header %}
-<a class="navbar-brand" href="">アイディア評価マトリクスの削除</a>
+{% extends 'account/base.html' %}{% block title %}<title>
+  評価マトリクス削除-アイディア発想支援
+</title>
+{% endblock title %}
+<!--ヘッダー-->
+{% block header %}
+<span id="page-title">アイディア評価マトリクスの削除</span>
 {% endblock header%} {% block content %}
 <form action="" method="POST">
   {% csrf_token %}
