--- a/matrix/templates/matrix/form.html
+++ b/matrix/templates/matrix/form.html
@@ -1,4 +1,9 @@
-{% extends 'account/base.html' %} {% block header %}
+{% extends 'account/base.html' %}{% block title %}<title>
+  評価マトリクス投稿/編集-アイディア発想支援
+</title>
+{% endblock title %}
+<!--ヘッダー-->
+{% block header %}
 <a class="navbar-brand" href="">アイディア評価マトリクスの投稿/編集</a>
 {% endblock header%} {% block content %}
 <form action="" method="POST">
