--- a/refine/templates/refine/c_form.html
+++ b/refine/templates/refine/c_form.html
@@ -1,5 +1,10 @@
-{% extends 'account/base.html' %} {% block header %}
-<a class="navbar-brand" href="">アイディアの精緻化コメント投稿/編集</a>
+{% extends 'account/base.html' %}{% block title %}<title>
+  精緻化コメント投稿/編集-アイディア発想支援
+</title>
+{% endblock title %}
+<!--ヘッダー-->
+{% block header %}
+<span id="page-title">アイディアの精緻化コメント投稿/編集</span>
 {% endblock header%} {% block content %}
 
 <form action="" method="POST">
