--- a/refine/templates/refine/update.html
+++ b/refine/templates/refine/update.html
@@ -1,5 +1,10 @@
-{% extends 'account/base.html' %} {% block header %}
-<a class="navbar-brand" href="">アイディアの精緻化論点の編集と優先順位の設定</a>
+{% extends 'account/base.html' %}{% block title %}<title>
+  Iディの精緻化編集-アイディア発想支援
+</title>
+{% endblock title %}
+<!--ヘッダー-->
+{% block header %}
+<span id="page-title">アイディアの精緻化論点の編集と優先順位の設定</span>
 {% endblock header%} {% block content %}
 <form action="" method="POST">
   {% csrf_token %}
