--- a/reflect/templates/reflect/c_delete.html
+++ b/reflect/templates/reflect/c_delete.html
@@ -1,5 +1,10 @@
-{% extends 'account/base.html' %} {% block header %}
-<a class="navbar-brand" href="">アイディアの振り返り削除</a>
+{% extends 'account/base.html' %}{% block title %}<title>
+  振り返り削除-アイディア発想支援
+</title>
+{% endblock title %}
+<!--ヘッダー-->
+{% block header %}
+<span id="page-title">アイディアの振り返り削除</span>
 {% endblock header %} {% block content %}
 <h3>「{{Issues.comment_content}}」を削除します。</h3>
 <form action="" method="POST">
