--- a/reflect/templates/reflect/c_form.html
+++ b/reflect/templates/reflect/c_form.html
@@ -1,5 +1,10 @@
-{% extends 'account/base.html' %} {% block header %}
-<a class="navbar-brand" href="">アイディアの振り返りコメント投稿/編集</a>
+{% extends 'account/base.html' %}{% block title %}<title>
+  振り返りコメント投稿/削除-アイディア発想支援
+</title>
+{% endblock title %}
+<!--ヘッダー-->
+{% block header %}
+<span id="page-title">アイディアの振り返りコメント投稿/編集</span>
 {% endblock header%} {% block content %}
 <form action="" method="POST">
   {% csrf_token %}
