--- a/reflect/templates/reflect/delete.html
+++ b/reflect/templates/reflect/delete.html
@@ -1,5 +1,9 @@
-{% extends 'account/base.html' %} {% block header %}
-<a class="navbar-brand" href="">アイディアの振り返り削除</a>
+{% extends 'account/base.html' %} {% block title %}<title>
+  振り返り削除-アイディア発想支援
+</title>
+{% endblock title %}
+<!--ヘッダー-->{% block header %}
+<span id="page-title">アイディアの振り返り削除</span>
 {% endblock header %} {% block content %}
 <h3>「{{reflect.issues}}」を削除します。</h3>
 <form action="" method="POST">
