--- a/reflect/templates/reflect/p_form.html
+++ b/reflect/templates/reflect/p_form.html
@@ -1,5 +1,9 @@
-{% extends 'account/base.html' %} {% block header %}
-<a class="navbar-brand" href="">振り返り 問題点の入力</a>
+{% extends 'account/base.html' %} {% block title %}<title>
+  振り返り投稿/編集-アイディア発想支援
+</title>
+{% endblock title %}
+<!--ヘッダー-->{% block header %}
+<span id="page-title">振り返り問題点の投稿/編集</span>
 {% endblock header%} {% block content %}
 <form action="" method="POST">
   {% csrf_token %}
