--- a/retry/templates/retry/delete.html
+++ b/retry/templates/retry/delete.html
@@ -1,5 +1,10 @@
-{% extends 'account/base.html' %} {% block header %}
-<a class="navbar-brand" href="">削除</a>
+{% extends 'account/base.html' %}{% block title %}<title>
+  再試行の設計削除-アイディア発想支援
+</title>
+{% endblock title %}
+<!--ヘッダー-->
+{% block header %}
+<span id="page-title">削除</span>
 {% endblock header%} {% block content %}
 <h3>「{{content.content}}」を削除します。</h3>
 <form action="" method="POST">
