--- a/retry/templates/retry/form.html
+++ b/retry/templates/retry/form.html
@@ -1,5 +1,9 @@
-{% extends 'account/base.html' %} {% block header %}
-<a class="navbar-brand" href="">投稿/編集</a>
+{% extends 'account/base.html' %} {% block title %}<title>
+  再試行の設計投稿/編集-アイディア発想支援
+</title>
+{% endblock title %}
+<!--ヘッダー-->{% block header %}
+<span id="page-title">投稿/編集</span>
 {% endblock header%} {% block content %}
 <form action="" method="POST">
   {% csrf_token %}
