--- a/retry/templates/retry/list.html
+++ b/retry/templates/retry/list.html
@@ -1,4 +1,8 @@
-{% extends 'account/base.html' %} {% block header %}
+{% extends 'account/base.html' %} {% block title %}<title>
+  再試行の設計-アイディア発想支援
+</title>
+{% endblock title %}
+<!--ヘッダー-->{% block header %}
 <p>
   <span id="page-title">再試行の設計</span>
   　　　振り返りで定めた問題点を解決するためには、何をすべきか話し合い再試行の内容を定め、入力しましょう
